--- a/app/scss/components/_global.scss
+++ b/app/scss/components/_global.scss
@@ -8,12 +8,28 @@
   visibility : hidden;
  }
 
+
+ .section-pad-sm {
+     padding: 20px 0;
+ }
+ .section-pad-md {
+     padding: 60px 0;
+ }
+ .section-pad-lg {
+    padding: 100px;
+ }
+
+//Responsive Classes
 .screen-xs-center {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: $screen-xs-max) {
     display: block;
     margin: 0 auto;
     text-align : center ;
     float: none !important;
   }
 }
-
+.screen-xs-none {
+  @media screen and (max-width: $screen-xs-max){
+    display: none;
+  }
+}
