--- a/app/scss/components/_global.scss
+++ b/app/scss/components/_global.scss
@@ -8,7 +8,6 @@
   visibility : hidden;
  }
 
-
  .section-pad-sm {
      padding: 20px 0;
  }
@@ -18,6 +17,15 @@
  .section-pad-lg {
     padding: 100px;
  }
+.section-margin-sm {
+    margin : 20px 0;
+}
+.section-margin-md {
+    margin : 60px 0;
+}
+.section-margin-lg{
+    margin : 100px 0;
+}
 
 //Responsive Classes
 .screen-xs-center {
