--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,5 +1,6 @@
-@import 'components/global';
 @import 'components/variables';
+@import 'components/global';
+@import 'components/components';
 
 .test {
 	width : percentage(5/7);
