added parallax class and demo

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,6 +1,7 @@
 @import 'components/variables';
 @import 'components/global';
 @import 'components/components';
+@import 'components/parallax';
 
 .test {
 	width : percentage(5/7);
