--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+  margin: 0; }
+
 .center {
   float: none;
   margin: 0 auto;
@@ -41,6 +45,41 @@
   padding: 20px;
   margin: 60px;
   border-radius: 10px; }
+
+.parallax, .bgimg-1, .bgimg-2, .bgimg-3 {
+  position: relative;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.bgimg-1 {
+  background-image: url("https://images3.alphacoders.com/853/thumb-1920-85305.jpg");
+  min-height: 100%;
+  opacity: .6; }
+
+.bgimg-2 {
+  background-image: url("https://s-media-cache-ak0.pinimg.com/originals/6c/d8/78/6cd87827e6d327d49657a64a78d47d9e.jpg");
+  min-height: 400px; }
+
+.bgimg-3 {
+  background-image: url("http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/07/HD-Background-27.jpg");
+  min-height: 400px; }
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000; }
+
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px; }
 
 .test {
   width: 71.42857%; }
