Added Flat UI colors on variables

--- a/app/scss/components/_variables.scss
+++ b/app/scss/components/_variables.scss
@@ -27,3 +27,30 @@ $container-lg: 1280px;
 $light-gray : #ebebeb;
 $gray : #ccc;
 $mid-gray: #ababab;
+
+//Flat UI colors
+
+//Green
+$light-emerald : #7CD5BA;
+$emerald : #2ecc71;
+$turquoise : #1abc9c;
+//red
+$flat-red: #e86c60;
+$flat-light-red : #e74c3c;
+$flat-dark-red : #c0392b;
+//blue
+$flat-lightest-blue : #E9F0F5;
+$flat-blue : #3498db;
+$flat-dark-blue : #2980b9;
+$wet-asphalt : #34495e;
+$midnight-blue: #2c3e50;
+
+//yellow and orange
+$flat-yellow : #f1c40f;
+$flat-orange : #f39c12;
+$flat-carrot : #e67e22;
+$flat-pumpkin : #d35400;
+
+//Neutral Colors
+$cloud: #ecf0f1;
+$silver: #bdc3c7;
