--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,39 @@
+@charset "UTF-8";
+@font-face {
+  font-family: 'Raleway';
+  src: url("../fonts/raleway/fonts/Raleway-Regular.eot");
+  src: local("☺"), url("../fonts/raleway/fonts/Raleway-Regular.woff") format("woff"), url("../fonts/raleway/fonts/Raleway-Regular.ttf") format("truetype"), url("../fonts/raleway/fonts/Raleway-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Raleway-Thin';
+  src: url("../fonts/raleway/fonts/Raleway-Thin.eot");
+  src: local("☺"), url("../fonts/raleway/fonts/Raleway-Thin.woff") format("woff"), url("../fonts/raleway/fonts/Raleway-Thin.ttf") format("truetype"), url("../fonts/raleway/fonts/Raleway-Thin.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Raleway-Bold';
+  src: url("../fonts/raleway/fonts/Raleway-Bold.eot");
+  src: local("☺"), url("../fonts/raleway/fonts/Raleway-Bold.woff") format("woff"), url("../fonts/raleway/fonts/Raleway-Bold.ttf") format("truetype"), url("../fonts/raleway/fonts/Raleway-Bold.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Raleway-Black';
+  src: url("../fonts/raleway/fonts/Raleway-Black.eot");
+  src: local("☺"), url("../fonts/raleway/fonts/Raleway-Black.woff") format("woff"), url("../fonts/raleway/fonts/Raleway-Black.ttf") format("truetype"), url("../fonts/raleway/fonts/Raleway-Black.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Raleway-Light';
+  src: url("../fonts/raleway/fonts/Raleway-Light.eot");
+  src: local("☺"), url("../fonts/raleway/fonts/Raleway-Light.woff") format("woff"), url("../fonts/raleway/fonts/Raleway-Light.ttf") format("truetype"), url("../fonts/raleway/fonts/Raleway-Light.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 html, body {
   height: 100%;
   margin: 0; }
@@ -40,7 +76,7 @@ html, body {
     display: none; } }
 
 .box {
-  background-color: #000;
+  background-color: #2c3e50;
   color: #ebebeb;
   padding: 20px;
   margin: 60px;
