--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -34,6 +34,41 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato/fonts/Lato-Regular.eot");
+  src: local("☺"), url("../fonts/lato/fonts/Lato-Regular.woff") format("woff"), url("../fonts/lato/fonts/Lato-Regular.ttf") format("truetype"), url("../fonts/lato/fonts/Lato-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Lato-Thin';
+  src: url("../fonts/lato/fonts/Lato-Thin.eot");
+  src: local("☺"), url("../fonts/lato/fonts/Lato-Thin.woff") format("woff"), url("../fonts/lato/fonts/Lato-Thin.ttf") format("truetype"), url("../fonts/lato/fonts/Lato-Thin.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Lato-Light';
+  src: url("../fonts/lato/fonts/Lato-Light.eot");
+  src: local("☺"), url("../fonts/lato/fonts/Lato-Light.woff") format("woff"), url("../fonts/lato/fonts/Lato-Light.ttf") format("truetype"), url("../fonts/lato/fonts/Lato-Light.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Lato-Bold';
+  src: url("../fonts/lato/fonts/Lato-Bold.eot");
+  src: local("☺"), url("../fonts/lato/fonts/Lato-Bold.woff") format("woff"), url("../fonts/lato/fonts/Lato-Bold.ttf") format("truetype"), url("../fonts/lato/fonts/Lato-Bold.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Lato-Black';
+  src: url("../fonts/lato/fonts/Lato-Black.eot");
+  src: local("☺"), url("../fonts/lato/fonts/Lato-Black.woff") format("woff"), url("../fonts/lato/fonts/Lato-Black.ttf") format("truetype"), url("../fonts/lato/fonts/Lato-Black.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 html, body {
   height: 100%;
   margin: 0; }
