Added Demo website - Onepress

--- a/app/scss/components/_global.scss
+++ b/app/scss/components/_global.scss
@@ -12,6 +12,10 @@ html, body {
 .none {
   visibility : hidden;
  }
+.shadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+   0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
  .section-pad-sm {
      padding: 20px 0;
