--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -73,13 +73,16 @@ html, body {
   height: 100%;
   margin: 0; }
 
-.center {
+.center, #one-press section.banner .hero {
   float: none;
   margin: 0 auto;
   text-align: center; }
 
 .none {
   visibility: hidden; }
+
+.shadow, #one-press nav {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
 .section-pad-sm {
   padding: 20px 0; }
@@ -151,6 +154,83 @@ html, body {
   padding: 18px;
   font-size: 25px;
   letter-spacing: 10px; }
+
+#one-press nav {
+  height: 75px;
+  background-color: #fff;
+  margin: 0;
+  position: relative;
+  z-index: 9999;
+  border: none; }
+  #one-press nav .one-press-nav {
+    height: 75px;
+    line-height: 75px;
+    padding: 0 15px;
+    color: #393939; }
+    #one-press nav .one-press-nav li a {
+      height: 75px;
+      line-height: 75px;
+      padding: 0 15px;
+      text-transform: uppercase;
+      color: #393939;
+      font-family: 'Raleway';
+      font-size: 13px;
+      font-weight: bold; }
+  #one-press nav .navbar-toggle {
+    border: 1px solid #ccc; }
+    #one-press nav .navbar-toggle .icon-bar {
+      background-color: #ccc; }
+  #one-press nav #myNavbar {
+    background-color: #fff; }
+
+#one-press section.banner {
+  height: 80%;
+  background-color: #ababab;
+  display: block;
+  position: relative;
+  font-family: 'Lato-light';
+  transition: .7s; }
+  @media screen and (max-width: 940px) {
+    #one-press section.banner {
+      height: 60%; } }
+  #one-press section.banner .carousel {
+    height: 100%;
+    z-index: 0;
+    position: relative; }
+  #one-press section.banner .hero {
+    position: absolute;
+    top: 0;
+    display: block;
+    color: #FFF;
+    padding: 10% 0;
+    width: 100%; }
+  #one-press section.banner .large-text {
+    font-size: 35px;
+    letter-spacing: 2px;
+    line-height: 1.3;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-family: 'Raleway-Bold';
+    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    transition: 1s; }
+    @media screen and (min-width: 940px) {
+      #one-press section.banner .large-text {
+        font-size: 75px;
+        letter-spacing: 4px; } }
+  #one-press section.banner .small-text {
+    font-size: 14px;
+    transition: 1s;
+    transition-delay: .4s; }
+    @media screen and (min-width: 940px) {
+      #one-press section.banner .small-text {
+        font-size: 18px; } }
+    @media screen and (min-width: 1140px) {
+      #one-press section.banner .small-text {
+        font-size: 22px; } }
+
+#one-press img {
+  width: 100%;
+  height: auto; }
 
 .test {
   width: 71.42857%; }
