--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -69,6 +69,55 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'Gotham';
+  src: url("../fonts/gotham/fonts/Gotham Regular.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/Gotham Regular.woff") format("woff"), url("../fonts/gotham/fonts/Gotham Regular.ttf") format("truetype"), url("../fonts/gotham/fonts/Gotham Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Gotham-Bold';
+  src: url("../fonts/gotham/fonts/Gotham Bold Regular.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/Gotham Bold Regular.woff") format("woff"), url("../fonts/gotham/fonts/Gotham Bold Regular.ttf") format("truetype"), url("../fonts/gotham/fonts/Gotham Bold Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Gotham-Light';
+  src: url("../fonts/gotham/fonts/GothamLight Regular.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/GothamLight Regular.woff") format("woff"), url("../fonts/gotham/fonts/GothamLight Regular.ttf") format("truetype"), url("../fonts/gotham/fonts/GothamLight Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Gotham-Book';
+  src: url("../fonts/gotham/fonts/Gotham Book Regular.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/Gotham Book Regular.woff") format("woff"), url("../fonts/gotham/fonts/Gotham Book Regular.ttf") format("truetype"), url("../fonts/gotham/fonts/Gotham Book Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'gotham-narrow';
+  src: url("../fonts/gotham/fonts/gotham-narrow-extralight-58df142829eeb.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/gotham-narrow-extralight-58df142829eeb.woff") format("woff"), url("../fonts/gotham/fonts/gotham-narrow-extralight-58df142829eeb.ttf") format("truetype"), url("../fonts/gotham/fonts/gotham-narrow-extralight-58df142829eeb.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Gotham-Rounded';
+  src: url("../fonts/gotham/fonts/Gotham Rounded Book.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/Gotham Rounded Book.woff") format("woff"), url("../fonts/gotham/fonts/Gotham Rounded Book.ttf") format("truetype"), url("../fonts/gotham/fonts/Gotham Rounded Book.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'gotham-rounded-light';
+  src: url("../fonts/gotham/fonts/gotham-rounded-light-58df143f9a481.eot");
+  src: local("☺"), url("../fonts/gotham/fonts/gotham-rounded-light-58df143f9a481.woff") format("woff"), url("../fonts/gotham/fonts/gotham-rounded-light-58df143f9a481.ttf") format("truetype"), url("../fonts/gotham/fonts/gotham-rounded-light-58df143f9a481.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 html, body {
   height: 100%;
   margin: 0; }
