--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -118,6 +118,55 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url("../fonts/roboto/fonts/Roboto-Regular.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/Roboto-Regular.woff") format("woff"), url("../fonts/roboto/fonts/Roboto-Regular.ttf") format("truetype"), url("../fonts/roboto/fonts/Roboto-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Roboto-Light';
+  src: url("../fonts/roboto/fonts/Roboto-Light.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/Roboto-Light.woff") format("woff"), url("../fonts/roboto/fonts/Roboto-Light.ttf") format("truetype"), url("../fonts/roboto/fonts/Roboto-Light.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Roboto-Black';
+  src: url("../fonts/roboto/fonts/Roboto-Black.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/Roboto-Black.woff") format("woff"), url("../fonts/roboto/fonts/Roboto-Black.ttf") format("truetype"), url("../fonts/roboto/fonts/Roboto-Black.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Roboto-Bold';
+  src: url("../fonts/roboto/fonts/Roboto-Bold.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/Roboto-Bold.woff") format("woff"), url("../fonts/roboto/fonts/Roboto-Bold.ttf") format("truetype"), url("../fonts/roboto/fonts/Roboto-Bold.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Roboto-Condensed';
+  src: url("../fonts/roboto/fonts/RobotoCondensed-Regular.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/RobotoCondensed-Regular.woff") format("woff"), url("../fonts/roboto/fonts/RobotoCondensed-Regular.ttf") format("truetype"), url("../fonts/roboto/fonts/RobotoCondensed-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Roboto-Condensed-Bold';
+  src: url("../fonts/roboto/fonts/RobotoCondensed-Bold.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/RobotoCondensed-Bold.woff") format("woff"), url("../fonts/roboto/fonts/RobotoCondensed-Bold.ttf") format("truetype"), url("../fonts/roboto/fonts/RobotoCondensed-Bold.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Roboto-Condensed-Light';
+  src: url("../fonts/roboto/fonts/RobotoCondensed-Light.eot");
+  src: local("☺"), url("../fonts/roboto/fonts/RobotoCondensed-Light.woff") format("woff"), url("../fonts/roboto/fonts/RobotoCondensed-Light.ttf") format("truetype"), url("../fonts/roboto/fonts/RobotoCondensed-Light.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 html, body {
   height: 100%;
   margin: 0; }
