--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -3,6 +3,7 @@
 
 //components
 @import 'components/variables';
+@import 'components/reset';
 @import 'components/global';
 @import 'components/components';
 @import 'components/parallax';
